# File-Index-Scraper

./: Cargo.toml
.devcontainer/: devcontainer.json
.github/workflows/: RustCI.yml
src/: enums.rs  filters.rs  init.rs  json_struct.rs  main.rs  parser.rs  simple_file_info.rs  walker.rs
