[package]
name = "file_index_scraper"
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Scrapes file server `index.html` and then processes it."
repository = "https://github.com/RoganMatrivski/File-Index-Scraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "file-index-scraper"
path = "src/main.rs"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-recursion = "1.0.0"
clap = { version = "4.0.22", features = ["derive"] }
futures = "0.3.25"
globset = "0.4.10"
itertools = "0.11.0"
regex = "1.7.0"
reqwest = { version = "0.11.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tl = "0.7.7"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
urlencoding = "2.1.2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
